<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="horizontal" 
   		android:focusable="true"
	    android:focusableInTouchMode="true">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.75"
            android:text="@string/appid"
            android:textSize="12pt" />

        <EditText
            android:id="@+id/edittext_appid"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:hint="@string/input_appid"
            android:inputType="number" 
             android:imeOptions="actionNext"/>
    </LinearLayout>     
	<LinearLayout
 		android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
		android:gravity="center"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
    	android:orientation="horizontal">
  
      	<TextView 
      	    android:textSize="12pt" 
       		android:text="@string/uid"
       		android:layout_weight="0.75"
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content" />
    
      	<EditText
      	    android:id="@+id/edittext_uid" 
      		android:layout_weight="0.25"
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content"
      		android:hint="@string/input_uid" />
    
    </LinearLayout>
    

	  <LinearLayout
 		android:layout_marginLeft="10dp"
    	android:layout_marginRight="10dp"
		android:gravity="center"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
    	android:orientation="horizontal">
      	<TextView
      	    android:textSize="12pt" 
       		android:text="@string/sid"
       		android:layout_weight="0.75"
       		android:layout_width="fill_parent"
       		android:layout_height="wrap_content" />
      	
      	<EditText android:id="@+id/edittext_sid"
      	    	android:layout_weight="0.25"
          		android:layout_width="fill_parent"
       			android:layout_height="wrap_content"
             	android:hint="@string/input_sid" /> 
      </LinearLayout>
  
		<Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>
